Zoom gedung direktur

--- a/denah-lantai1.html
+++ b/denah-lantai1.html
@@ -8,13 +8,32 @@
     <link rel="stylesheet" href="css/styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <style>
+        /* Mengatur body agar gambar ditampilkan di tengah */
+        body,
+        html {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f8f9fa;
+        }
+
+        /* Menampilkan gambar dengan ukuran maksimal yang tetap responsif */
+        img {
+            max-width: 90%;
+            max-height: 90%;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            /* Menambahkan bayangan */
+        }
+    </style>
 </head>
 
 <body>
     <!-- Navbar Bootstrap -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark w-100 position-absolute top-0">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">POLINES MAP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -37,13 +56,11 @@
         </div>
     </nav>
 
-    <div id="map"></div>
+    <!-- Menampilkan gambar denah lantai 1 -->
+    <img src="images/denah.png" alt="Denah Lantai 1 Gedung Kerjasama">
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Leaflet JS -->
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="js/map.js"></script>
 
 </body>
 
