--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="js/map.js"></script>
-
+    <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
