--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
 
     <div id="map"></div>
 
+    <!-- Bottom centered buttons -->
+    <div class="bottom-buttons">
+        <div class="btn-group">
+            <button class="cb-btn cb-btn-default" type="button" data-gedung="direktur">Gedung Direktur</button>
+            <button class="cb-btn cb-btn-default dropdown-toggle" type="button" id="dropdownDirektur" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownDirektur">
+                <li><a class="dropdown-item" href="#" data-gedung="direktur" data-lantai="1">Lantai 1</a></li>
+                <li><a class="dropdown-item" href="#" data-gedung="direktur" data-lantai="2">Lantai 2</a></li>
+            </ul>
+        </div>
+        <div class="btn-group">
+            <button class="cb-btn cb-btn-default" type="button" data-gedung="gks">Gedung GKS</button>
+            <button class="cb-btn cb-btn-default dropdown-toggle" type="button" id="dropdownGKS" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownGKS">
+                <li><a class="dropdown-item" href="#" data-gedung="gks" data-lantai="1">Lantai 1</a></li>
+                <li><a class="dropdown-item" href="#" data-gedung="gks" data-lantai="2">Lantai 2</a></li>
+            </ul>
+        </div>
+        <!-- Add more button groups for other buildings here -->
+    </div>
+
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Leaflet JS -->
