--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <div class="bottom-buttons">
         <div class="btn-group">
             <button class="cb-btn cb-btn-default" type="button" data-gedung="direktur">Gedung Direktur</button>
-            <button class="cb-btn cb-btn-default dropdown-toggle" type="button" id="dropdownDirektur" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="cb-btn cb-btn-default dropdown-toggle" type="button" id="dropdownDirektur"
+                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="visually-hidden">Toggle Dropdown</span>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownDirektur">
@@ -53,7 +54,8 @@
         </div>
         <div class="btn-group">
             <button class="cb-btn cb-btn-default" type="button" data-gedung="gks">Gedung GKS</button>
-            <button class="cb-btn cb-btn-default dropdown-toggle" type="button" id="dropdownGKS" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="cb-btn cb-btn-default dropdown-toggle" type="button" id="dropdownGKS"
+                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="visually-hidden">Toggle Dropdown</span>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownGKS">
