--- a/index.html
+++ b/index.html
@@ -14,28 +14,24 @@
 
 <body>
     <!-- Navbar Bootstrap -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-light" style="background-color: #03428B; padding: 10px 0;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">POLINES MAP</a>
+            <!-- Ganti tulisan dengan gambar logo -->
+            <a class="navbar-brand" href="#">
+                <img src="images/polines.png" alt="POLINESLogo" height="50" class="d-inline-block align-text-top">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
+                    <!-- Tambahkan menu di sini jika diperlukan -->
                 </ul>
             </div>
         </div>
     </nav>
+
 
     <div id="map"></div>
 
