--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
 <body>
     <!-- Navbar Bootstrap -->
-    <nav class="navbar navbar-light" style="background-color: #03428B; padding: 10px 0;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #03428B;">
         <div class="container-fluid">
-            <!-- Ganti tulisan dengan gambar logo -->
             <a class="navbar-brand" href="#">
                 <img src="images/polines.png" alt="POLINESLogo" height="50" class="d-inline-block align-text-top">
             </a>
@@ -25,13 +24,17 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <!-- Tambahkan menu di sini jika diperlukan -->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Konfigurasi Perangkat</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-
 
     <div id="map"></div>
 
