update button perlantai

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <!-- Bottom centered buttons -->
     <div class="bottom-buttons">
         <div class="btn-group">
-            <button class="cb-btn cb-btn-default" type="button" data-gedung="gks">Gedung GKS</button>
+            <button class="cb-btn cb-btn-default" type="button" data-gedung="gks" data-lantai="0">Gedung GKS</button>
             <button class="cb-btn cb-btn-default dropdown-toggle" type="button" id="dropdownGKS"
                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="visually-hidden">Toggle Dropdown</span>
             </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownGKS">
+            <ul class="dropdown-menu" aria-labelledby="dropdownGKS" disabled selected value>
                 <li><a class="dropdown-item" href="#" data-gedung="gks" data-lantai="1">Lantai 1</a></li>
                 <li><a class="dropdown-item" href="#" data-gedung="gks" data-lantai="2">Lantai 2</a></li>
                 <li><a class="dropdown-item" href="#" data-gedung="gks" data-lantai="3">Lantai 3</a></li>
